# CLIF-TableOne

./: .gitignore  AGENTS.md  CHANGE.md  DATA_ENGINE_GUIDE.md  HOW_TO_RUN.md  OUTPUT_REFERENCE.md  QUICKSTART.md  README.md  README_APP.md  TABLEONE_VIEWER_GUIDE.md  advanced_usage.md  app.py  app_fastapi_windows.bat  app_fastapi_windows.ps1  app_streamlit.py  app_windows.bat  app_windows.ps1  create_test_data.py  generate_clif_completeness.py  generate_clif_report_card.py  pyproject.toml  requirements.txt  run_analysis.py  run_analysis_windows.bat  run_analysis_windows.ps1  run_ecdf.py  run_project.py  run_project_windows.bat  run_project_windows.ps1  run_sofa.py  run_tableone.py  run_tableone_all.py  run_tableone_ward.py  test_table_structure.py
code/: 00_table_summary.ipynb  README_TABLE_ONE.md  __init__.py  clif_completeness_checker.py  clif_report_card.py  generate_table_one.ipynb  generate_table_one_2_1.ipynb  generate_table_one_2_1.py  pyCLIF.py  run_get_ecdf.py  run_table_one.py  table_one.ipynb
code/archives/: convert_notebook.py  generate_clif_report_card.py  generate_table_one.sh  generate_table_one_2_1.ipynb  generate_table_one_2_1.py.backup  generate_table_one_2_1_og.py  sofa_score.py
config/: README.md  config_template.json  outlier_config.yaml  tableone_merge_rules.yaml
dev/: DEVELOPER_GUIDE.md  FEEDBACK_SYSTEM.md  adt_location_coverage.py  aggregator.ipynb  checklist.md  completeness_status_tracker.ipynb  dqa_session_checklist.md  sampling.md  table_one_overall_aggregator.ipynb  test_all_analyzers_detailed.ipynb
dev/aggregate_scripts/: aggregate_sites.py  aggregation_notes.md
dev/aggregator_scripts/: table_one_by_year_by_site.ipynb
dev/calibrate_suppression/: .gitignore  README.md  calibrate.py
dev/stress_test/: inflate_clif_data.py  run_chain.sh  stress_test.py
get_ecdf/: precompute_ecdf_bins.py  utils.py
get_ecdf/ecdf_config/: lab_vital_config.yaml
legacy/: README.md  clif_report_card.py  generate_table_one.bat  pyCLIF.py
modules/: __init__.py  strata.py  tableone_viewer.py
modules/cli/: __init__.py  formatters.py  pdf_generator.py  runner.py
modules/ecdf/: __init__.py  generator.py  generator_duckdb.ipynb  runner.py  (+6 more)
precomputed_data/: precompute_ecdf_bins.py  utils.py  visualize_bins_ecdf.py
scripts/: prune_feedback_orphans.py
server/: config.py  main.py  session.py
static/: index.html
tests/: test_cohort_builder.py  test_cohort_filter.py  test_dst_fix.py  test_nidfd_calculator.py  test_suppression.py  test_time_to_icu_calculator.py
(+106 files in other folders)
