[project]
name = "clif-tableone"
version = "0.1.0"
description = "Validation and TableOne Cohort for CLIF-2.1"
requires-python = ">=3.11"
dependencies = [
    "clifpy>=0.4.4",
    "duckdb>=1.4.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "polars>=1.34.0",
    "pytz>=2025.2",
    "reportlab>=4.4.4",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "tableone>=0.9.5",
    "tqdm>=4.67.1",
    "upsetplot>=0.9.0",
    "venny4py>=1.0.3",
]

[tool.uv.sources]
clifpy = { path = "/Users/dema/WD/clifpy", editable = true }
