[project]
name = "clif-tableone"
version = "0.1.0"
description = "Validation and TableOne Cohort for CLIF-3.0"
requires-python = ">=3.11"
dependencies = [
    "clifpy>=0.5.0",
    "duckdb>=1.4.1",
    "jupyter>=1.1.1",
    "lifelines>=0.27.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "polars>=1.34.0",
    "psutil>=5.9.0",
    "pyarrow>=15.0.0",
    "pydantic>=2.0.0",
    "pytz>=2025.2",
    "pyyaml>=6.0",
    "reportlab>=4.4.4",
    "rich>=13.0.0",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "tableone>=0.9.5",
    "tqdm>=4.67.1",
    "upsetplot>=0.9.0",
    "venny4py>=1.0.3",
]

[tool.uv.sources]
# CLIF 3.0 support: the published clifpy 0.5.0 ships 3.0 schemas but only 2.1-era
# table classes. The 3.0 development branch adds table classes for mcs and all new
# 3.0 tables. Pinned via git; uv.lock captures the exact commit for reproducibility.
clifpy = { git = "https://github.com/Common-Longitudinal-ICU-data-Format/clifpy.git", branch = "feat/clif-3.0-schema-versioning" }
